[project]
name = "pro-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Awais68", email = "hamza768@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.16",
]

[project.scripts]
pro-1 = "pro_1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
